# OpenCL-Wrapper-Nix

./: .gitignore  CMakeLists.txt  flake.nix  packages.nix
kernels/: add_kernel.cl
src/: opencl.hpp
